--- a/src/component/HeaderLogo/HeaderLogo.style.scss
+++ b/src/component/HeaderLogo/HeaderLogo.style.scss
@@ -1,11 +1,10 @@
 .HeaderLogo {
   // flex: 1;
-  height: 34px;
-  text-align: center;
+  height: 26.48px;
+  text-align: initial;
   &_isArabic {
     margin-right: 0px;
   }
-  margin-right: 20px;
 
   @include before-desktop {
     height: auto;
@@ -19,6 +18,7 @@
     // background-color: #ffffff;
     .LazyLoad-wrapper {
       img {
+        width: 80% !important;
         text-align: left;
       }
     }
